[workspace]

members = [
    "common",
    "ilia-drun"
, "ilia-windows"]
resolver = "2"

[workspace.dependencies]
common = { path = "common" }
anyhow = "1.0.95"
dirs = "5.0.1"
freedesktop-desktop-entry = "0.7.5"
iced = { version = "0.13.1", features = ["wgpu"] }
iced_core = "0.13.2"
iced_runtime = "0.13.2"
shell-words = "^1"
