[package]
name = "ilia-drun"
version = "0.1.0"
edition = "2021"

[dependencies]
common.workspace = true
anyhow.workspace = true
dirs.workspace = true
freedesktop-desktop-entry.workspace = true
iced.workspace = true
iced_core.workspace = true
iced_runtime.workspace = true
shell-words.workspace = true
